--- a/index.html
+++ b/index.html
@@ -5,86 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardano Real-Time Hub</title>
     <style>
-        :root { --bg: #050814; --card: #0f172a; --accent: #3b82f6; --text: #f1f5f9; --success: #10b981; }
-        body { background: var(--bg); color: var(--text); font-family: -apple-system, sans-serif; margin: 0; padding: 20px; display: flex; justify-content: center; }
-        .container { width: 100%; max-width: 500px; }
-        .header { text-align: center; margin-bottom: 30px; }
-        .card { background: var(--card); border-radius: 24px; padding: 25px; margin-bottom: 20px; border: 1px solid #1e293b; box-shadow: 0 20px 25px -5px rgba(0,0,0,0.5); }
-        .token-name { font-size: 0.8rem; color: #94a3b8; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; }
-        .price-ada { font-size: 2.5rem; font-weight: 800; margin: 10px 0; color: var(--text); }
-        .price-ada span { font-size: 1.2rem; color: var(--accent); margin-left: 5px; }
-        .price-usd { font-size: 1.1rem; color: #64748b; font-weight: 500; }
-        #ada-market { background: rgba(59, 130, 246, 0.1); padding: 10px; border-radius: 12px; font-size: 0.9rem; color: var(--accent); text-align: center; margin-bottom: 25px; border: 1px solid rgba(59, 130, 246, 0.2); }
-        .loader { height: 2px; width: 100%; background: #1e293b; position: relative; overflow: hidden; border-radius: 2px; margin-top: 15px; }
-        .loader-bar { position: absolute; height: 100%; background: var(--accent); animation: loading 2s infinite; }
-        @keyframes loading { 0% { left: -40%; width: 40%; } 100% { left: 100%; width: 40%; } }
+        :root { --bg: #050814; --card: #0f172a; --accent: #3b82f6; --text: #f1f5f9; }
+        body { background: var(--bg); color: var(--text); font-family: sans-serif; padding: 20px; display: flex; justify-content: center; }
+        .container { width: 100%; max-width: 450px; }
+        .card { background: var(--card); border-radius: 20px; padding: 25px; margin-bottom: 20px; border: 1px solid #1e293b; position: relative; }
+        .token-label { font-size: 0.75rem; color: #64748b; font-weight: bold; text-transform: uppercase; }
+        .price-ada { font-size: 2.2rem; font-weight: 800; margin: 10px 0; color: #facc15; }
+        .price-usd { font-size: 1rem; color: #94a3b8; }
+        #ada-usd-header { text-align: center; margin-bottom: 20px; font-weight: bold; color: var(--accent); }
+        .status-dot { height: 8px; width: 8px; background-color: #10b981; border-radius: 50%; display: inline-block; margin-right: 5px; }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <div class="header">
-        <h1 style="font-size: 1.5rem; margin: 0;">Blockchain Live Data</h1>
-        <p style="color: #64748b; font-size: 0.9rem;">Direct Node-to-Browser Feed</p>
-    </div>
-
-    <div id="ada-market">ADA Price: <b>$...</b></div>
+    <div id="ada-usd-header">ADA Market: $...</div>
 
     <div class="card">
-        <div class="token-name">ORACLE / ADA</div>
-        <div id="oracle-ada" class="price-ada">...<span>₳</span></div>
-        <div id="oracle-usd" class="price-usd">$... USD</div>
-        <div class="loader"><div class="loader-bar"></div></div>
+        <div class="token-label"><span class="status-dot"></span> ORACLE / ADA</div>
+        <div id="oracle-ada" class="price-ada">0.000 ₳</div>
+        <div id="oracle-usd" class="price-usd">$0.00 USD</div>
     </div>
 
     <div class="card">
-        <div class="token-name">VLRM / ADA</div>
-        <div id="vlrm-ada" class="price-ada">...<span>₳</span></div>
-        <div id="vlrm-usd" class="price-usd">$... USD</div>
-        <div class="loader"><div class="loader-bar"></div></div>
+        <div class="token-label"><span class="status-dot"></span> VLRM / ADA</div>
+        <div id="vlrm-ada" class="price-ada">0.000 ₳</div>
+        <div id="vlrm-usd" class="price-usd">$0.00 USD</div>
     </div>
 </div>
 
 <script>
-    const ORACLE_ID = "328a18bac517630826a106bff1a55caf455de84cdba98416f8e093b27393c37310950f58596be5013b942d52accb931c2800cf132db36fb5fd7d71c4";
-    const VLRM_ID = "63efb704b7396890e4d9539d030c0e667739043add65c00f96c586c056616c6f72756d";
+    // IDs de la Blockchain (Policy + Hex Name)
+    const ORACLE = "328a18bac517630826a106bff1a55caf455de84cdba98416f8e093b27393c37310950f58596be5013b942d52accb931c2800cf132db36fb5fd7d71c4";
+    const VLRM = "63efb704b7396890e4d9539d030c0e667739043add65c00f96c586c056616c6f72756d";
 
-    async function fetchLivePrices() {
+    async function updatePrices() {
         try {
-            // 1. Precio de ADA (vía Binance API - La más directa y sin bloqueos)
+            // 1. Obtener precio de ADA desde Binance (Precio de mercado global)
             const adaRes = await fetch("https://api.binance.com/api/v3/ticker/price?symbol=ADAUSDT");
             const adaData = await adaRes.json();
-            const adaUsd = parseFloat(adaData.price);
-            document.getElementById('ada-market').innerHTML = `ADA Price: <b>$${adaUsd.toFixed(4)}</b>`;
+            const adaPrice = parseFloat(adaData.price);
+            document.getElementById('ada-usd-header').innerText = `ADA Market: $${adaPrice.toFixed(4)}`;
 
-            // 2. Precios en ADA (vía MuesliSwap API - Sin restricciones de CORS para navegadores)
-            const tokenRes = await fetch("https://api.muesliswap.com/token/price/all");
-            const tokenData = await tokenRes.json();
+            // 2. Obtener precios de los Tokens en ADA desde DexHunter (Directo de los DEXs de Cardano)
+            // Usamos un proxy de "allorigins" para evitar el bloqueo CORS del navegador
+            const hunterUrl = `https://api.dexhunter.io/v1/price?units=${ORACLE},${VLRM}`;
+            const proxyUrl = `https://api.allorigins.win/get?url=${encodeURIComponent(hunterUrl)}`;
+            
+            const response = await fetch(proxyUrl);
+            const rawData = await response.json();
+            const data = JSON.parse(rawData.contents);
 
-            // Filtrar ORACLE
-            const oraclePrice = tokenData[ORACLE_ID];
-            if (oraclePrice) {
-                const pAda = parseFloat(oraclePrice);
-                document.getElementById('oracle-ada').innerHTML = `${pAda.toFixed(3)}<span>₳</span>`;
-                document.getElementById('oracle-usd').innerText = `$${(pAda * adaUsd).toFixed(4)} USD`;
+            // Procesar ORACLE
+            if (data[ORACLE]) {
+                const pAda = data[ORACLE];
+                document.getElementById('oracle-ada').innerText = pAda.toFixed(3) + " ₳";
+                document.getElementById('oracle-usd').innerText = "$" + (pAda * adaPrice).toFixed(4) + " USD";
             }
 
-            // Filtrar VLRM
-            const vlrmPrice = tokenData[VLRM_ID];
-            if (vlrmPrice) {
-                const pAda = parseFloat(vlrmPrice);
-                document.getElementById('vlrm-ada').innerHTML = `${pAda.toFixed(3)}<span>₳</span>`;
-                document.getElementById('vlrm-usd').innerText = `$${(pAda * adaUsd).toFixed(4)} USD`;
+            // Procesar VLRM
+            if (data[VLRM]) {
+                const pAda = data[VLRM];
+                document.getElementById('vlrm-ada').innerText = pAda.toFixed(3) + " ₳";
+                document.getElementById('vlrm-usd').innerText = "$" + (pAda * adaPrice).toFixed(4) + " USD";
             }
 
-        } catch (error) {
-            console.error("Data fetch error", error);
+        } catch (e) {
+            console.error("Error cargando datos de la blockchain:", e);
         }
     }
 
-    // Ejecución inicial y ciclo de 20 segundos
-    fetchLivePrices();
-    setInterval(fetchLivePrices, 20000);
+    updatePrices();
+    // Actualización cada 30 segundos
+    setInterval(updatePrices, 30000);
 </script>
 
 </body>
