--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cardano Live Dashboard</title>
+    <style>
+        :root { --bg: #050814; --card: #111a2e; --accent: #3b82f6; --text: #f1f5f9; --gold: #facc15; }
+        body { background: var(--bg); color: var(--text); font-family: system-ui, -apple-system, sans-serif; padding: 20px; display: flex; justify-content: center; margin: 0; }
+        .container { width: 100%; max-width: 400px; }
+        .card { background: var(--card); border-radius: 20px; padding: 25px; margin-bottom: 20px; border: 1px solid #1e293b; box-shadow: 0 10px 20px rgba(0,0,0,0.3); }
+        .label { font-size: 0.7rem; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; }
+        .price-ada { font-size: 2.2rem; font-weight: 800; color: var(--gold); margin: 5px 0; }
+        .price-usd { font-size: 1rem; color: #94a3b8; }
+        #ada-header { text-align: center; margin-bottom: 25px; padding: 12px; background: rgba(59, 130, 246, 0.1); border-radius: 12px; border: 1px solid rgba(59, 130, 246, 0.2); font-weight: bold; }
+        .status { font-size: 0.65rem; color: #34d399; margin-top: 10px; text-align: right; font-family: monospace; }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <div id="ada-header">ADA Market: $...</div>
+
+    <div class="card">
+        <div class="label">ORACLE / ADA</div>
+        <div id="oracle-ada" class="price-ada">... ₳</div>
+        <div id="oracle-usd" class="price-usd">$... USD</div>
+        <div id="status-oracle" class="status">Sincronizando...</div>
+    </div>
+
+    <div class="card">
+        <div class="label">VLRM / ADA</div>
+        <div id="vlrm-ada" class="price-ada">... ₳</div>
+        <div id="vlrm-usd" class="price-usd">$... USD</div>
+        <div id="status-vlrm" class="status">Sincronizando...</div>
+    </div>
+</div>
+
 <script>
     const ORACLE_ID = "328a18bac517630826a106bff1a55caf455de84cdba98416f8e093b27393c37310950f58596be5013b942d52accb931c2800cf132db36fb5fd7d71c4";
-    const VLRM_ID = "63efb704b7396890e4d9539d030c0e667739043add65c00f96c586c056616c6f72756d";
-    // Pool específico de VLRM en VyFi (Respaldo directo de la blockchain)
     const VLRM_POOL = "cardano_vyfi_566ad937203b1ca4eb04c35588373b9e4a323984534e69b5523a1a9f";
 
     async function updateData() {
         let currentAdaPrice = 0;
 
-        // 1. Obtener precio de ADA (Binance)
+        // 1. Obtener precio de ADA
         try {
             const adaRes = await fetch("https://api.binance.com/api/v3/ticker/price?symbol=ADAUSDT");
             const adaData = await adaRes.json();
@@ -15,23 +51,22 @@
             document.getElementById('ada-header').innerText = `ADA Market: $${currentAdaPrice.toFixed(4)}`;
         } catch (e) { console.error("Error ADA:", e); }
 
-        // 2. Obtener ORACLE (Método Estándar)
+        // 2. Obtener ORACLE
         try {
             const resO = await fetch(`https://api.geckoterminal.com/api/v2/networks/cardano/tokens/${ORACLE_ID}`);
             const dataO = await resO.json();
             const pUsdO = parseFloat(dataO.data.attributes.price_usd);
-            document.getElementById('oracle-ada').innerText = (pUsdO / currentAdaPrice).toFixed(4) + " ₳";
-            document.getElementById('oracle-usd').innerText = "$" + pUsdO.toFixed(6) + " USD";
-            document.getElementById('status-oracle').innerText = "NETWORK OK";
+            if (currentAdaPrice > 0) {
+                document.getElementById('oracle-ada').innerText = (pUsdO / currentAdaPrice).toFixed(4) + " ₳";
+                document.getElementById('oracle-usd').innerText = "$" + pUsdO.toFixed(6) + " USD";
+                document.getElementById('status-oracle').innerText = "NETWORK OK";
+            }
         } catch (e) { document.getElementById('status-oracle').innerText = "ERROR ORACLE"; }
 
-        // 3. Obtener VLRM (Método Reforzado: Consulta Directa al Pool)
+        // 3. Obtener VLRM (Vía Pool Directo)
         try {
-            // Intentamos buscarlo en el pool específico de VyFi, que es más fiable para tokens pequeños
             const resV = await fetch(`https://api.geckoterminal.com/api/v2/networks/cardano/pools/${VLRM_POOL}`);
             const dataV = await resV.json();
-            
-            // Extraemos el precio del token base en relación al token de cotización (ADA)
             const pAdaV = parseFloat(dataV.data.attributes.base_token_price_quote_token);
             const pUsdV = parseFloat(dataV.data.attributes.base_token_price_usd);
             
@@ -41,11 +76,13 @@
                 document.getElementById('status-vlrm').innerText = "VYFI POOL LIVE";
             }
         } catch (e) { 
-            document.getElementById('status-vlrm').innerText = "REINTENTANDO VLRM..."; 
-            console.error("Error VLRM:", e);
+            document.getElementById('status-vlrm').innerText = "REINTENTANDO..."; 
         }
     }
 
     updateData();
     setInterval(updateData, 30000);
 </script>
+
+</body>
+</html>
