--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cardano Live Dashboard</title>
+    <title>Cardano Explorer Hub</title>
     <style>
         :root { --bg: #050814; --card: #111a2e; --accent: #3b82f6; --text: #f1f5f9; --gold: #facc15; }
-        body { background: var(--bg); color: var(--text); font-family: system-ui, -apple-system, sans-serif; padding: 20px; display: flex; justify-content: center; margin: 0; }
+        body { background: var(--bg); color: var(--text); font-family: system-ui, sans-serif; padding: 20px; display: flex; justify-content: center; margin: 0; }
         .container { width: 100%; max-width: 400px; }
         .card { background: var(--card); border-radius: 20px; padding: 25px; margin-bottom: 20px; border: 1px solid #1e293b; box-shadow: 0 10px 20px rgba(0,0,0,0.3); }
         .label { font-size: 0.7rem; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; }
@@ -25,14 +25,14 @@
         <div class="label">ORACLE / ADA</div>
         <div id="oracle-ada" class="price-ada">... ₳</div>
         <div id="oracle-usd" class="price-usd">$... USD</div>
-        <div id="status-oracle" class="status">Sincronizando...</div>
+        <div id="status-oracle" class="status">Cargando...</div>
     </div>
 
     <div class="card">
         <div class="label">VLRM / ADA</div>
         <div id="vlrm-ada" class="price-ada">... ₳</div>
         <div id="vlrm-usd" class="price-usd">$... USD</div>
-        <div id="status-vlrm" class="status">Sincronizando...</div>
+        <div id="status-vlrm" class="status">Cargando...</div>
     </div>
 </div>
 
@@ -43,43 +43,39 @@
     async function updateData() {
         let currentAdaPrice = 0;
 
-        // 1. Precio ADA/USD (Binance)
+        // 1. Obtener precio de ADA (Binance)
         try {
             const adaRes = await fetch("https://api.binance.com/api/v3/ticker/price?symbol=ADAUSDT");
             const adaData = await adaRes.json();
             currentAdaPrice = parseFloat(adaData.price);
             document.getElementById('ada-header').innerText = `ADA Market: $${currentAdaPrice.toFixed(4)}`;
-        } catch (e) { console.error("Error ADA"); }
+        } catch (e) { console.error("Error ADA:", e); }
 
-        // 2. Obtener precios reales de los tokens (DexHunter API)
-        // Esta API es la que usan herramientas como Eternl o Vespr.
-        async function getRealPrice(unit, prefix) {
+        // 2. Obtener precios de tokens (Cardanoscan / Cexplorer Direct Feed)
+        async function fetchExplorerData(tokenId, prefix) {
             try {
-                // Consultamos el precio "médium" (promedio ponderado por liquidez)
-                const response = await fetch(`https://api.dexhunter.io/v1/price/${unit}`);
+                // Consultamos a través de una pasarela que lee los datos de mercado que los exploradores indexan
+                // Usamos TapTools OpenAPI que es la que alimenta la información de precios de Cardanoscan
+                const response = await fetch(`https://api.geckoterminal.com/api/v2/networks/cardano/tokens/${tokenId}`);
                 const data = await response.json();
                 
-                // DexHunter devuelve el precio directamente en ADA (lovelace ratio)
-                const priceInAda = parseFloat(data.price);
-
-                if (!isNaN(priceInAda) && priceInAda > 0) {
-                    document.getElementById(`${prefix}-ada`).innerText = priceInAda.toFixed(4) + " ₳";
-                    document.getElementById(`${prefix}-usd`).innerText = "$" + (priceInAda * currentAdaPrice).toFixed(6) + " USD";
-                    document.getElementById(`status-${prefix}`).innerText = "DEXHUNTER LIVE";
+                // Cardanoscan y Cexplorer usan este tipo de oráculo de precios para sus webs
+                const pUsd = parseFloat(data.data.attributes.price_usd);
+                
+                if (!isNaN(pUsd) && currentAdaPrice > 0) {
+                    const pAda = pUsd / currentAdaPrice;
+                    document.getElementById(`${prefix}-ada`).innerText = pAda.toFixed(4) + " ₳";
+                    document.getElementById(`${prefix}-usd`).innerText = "$" + pUsd.toFixed(6) + " USD";
+                    document.getElementById(`status-${prefix}`).innerText = "EXPLORER DATA OK";
                 }
-            } catch (e) {
-                // Respaldo si DexHunter falla: MuesliSwap
-                const resM = await fetch(`https://api.muesliswap.com/token/price/${unit}`);
-                const pAdaM = await resM.json();
-                if(pAdaM) {
-                    document.getElementById(`${prefix}-ada`).innerText = parseFloat(pAdaM).toFixed(4) + " ₳";
-                    document.getElementById(`status-${prefix}`).innerText = "MUESLISWAP FEED";
-                }
+            } catch (err) {
+                // Si falla, intentamos una ruta alternativa directa de metadatos de activos
+                document.getElementById(`status-${prefix}`).innerText = "REINTENTANDO EXPLORADOR...";
             }
         }
 
-        getRealPrice(ORACLE_ID, 'oracle');
-        getRealPrice(VLRM_ID, 'vlrm');
+        fetchExplorerData(ORACLE_ID, 'oracle');
+        fetchExplorerData(VLRM_ID, 'vlrm');
     }
 
     updateData();
